--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,113 @@ html {
     background-color: #fff;
 }
 
+.modal.open {
+    display: flex;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3) ;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    /* display: flex; */
+}
+
+.modal-container {
+    background-color: #fff;
+    width: 900px;
+    max-width: calc(100% - 32px);
+    min-height: 200px;
+    position: relative;
+    animation: modalAnimation ease 0.62s;
+}
+
+.modal-close:hover{
+    opacity: 1;
+}
+
+.modal-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #fff;
+    padding: 12px;
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+
+.modal-header {
+    background-color: #009688;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #fff;
+}
+
+.modal-bag {
+    margin-right: 16px;
+}
+
+.modal-body {
+    padding : 16px;
+}
+
+.modal-label {
+    display: block;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.modal-input {
+    border : 1px solid #ccc;
+    width: 100%;
+    font-size: 15px;
+    padding : 10px;
+    margin-bottom: 24px;
+}
+
+#buy-ticket:hover {
+    opacity: 0.8;
+}
+
+#buy-ticket {
+    background-color: #009688;
+    border: none;
+    width: 100%;
+    font-size: 15px;
+    transform: uppercase;
+    padding : 18px;
+    cursor: pointer;
+}
+
+.modal-footer {
+    padding : 16px;
+    text-align: right;
+}
+
+.modal-footer a {
+    color : #2196f3;
+}
+
+@keyframes modalAnimation {
+    from { 
+        opacity: 0;
+        transform : translateY(-140px);
+    }
+    to { 
+        transform : translateY(0);
+        opacity: 1;
+    }
+}
+
 #footer{
     
 }
