--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background : url('/assets/img/slider/img1.jpg') top center / cover no-repeat;
+    background :  top center / cover no-repeat;
 
 }
 
