--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,7 +10,9 @@
 
 /* MOBILE */
 @media (max-width: 740px) {
-
+    .s-col-full {
+        width: 100%;
+    }
     #header {
         overflow : hidden;
     }
@@ -41,11 +43,9 @@
     }
 
     #nav .subnav a {
-        color : #000;
+        color : #888;
         padding : 5px 41px;
     }
-
-  
 
     #header .mobile-menu-btn {
         display: block;
@@ -55,5 +55,7 @@
         display: none;
     }
 
-
+    #content .memmber-image {
+        width : 60% ;
+    }
 }
