--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,10 +325,13 @@ html {
     text-decoration: none;
     color : #f1f1f1;
     background-color: #333;
-    padding: 10px 20px ;
+    padding: 11px 16px ;
     display : inline-block;
     margin-top: 15px;
     border: 1px solid #000;
+    text-align: center;
+    appearance: none;
+    --webkit-appearance: none;
 }
 
 .place-buy-btn:hover {
@@ -458,10 +461,18 @@ html {
     width : 30px;
 }
 
+.contact-info a {
+    color: #777;
+    opacity: 1;
+}
+
+.contact-info a:hover {
+    opacity: 0.6;
+}
+
 .contact-form {
     font-size: 15px;
 }
-
 
 .contact-form .form-control {
     padding: 10px;
@@ -503,12 +514,12 @@ html {
 }
 
 #footer p {
-    font-size: 20px;
+    font-size: 15px;
 }
 
 #footer p a {
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: none;
-    color: #f5f5f5
+    color: #f5f5f5;
 }
 
