--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,7 @@ html {
 #header .search-btn:hover {
     background-color: #f44336 ;
     cursor: pointer;
+    transition: 0.8s;
 }
 
 #header .mobile-menu-btn:hover {
@@ -181,7 +182,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background :  top center / cover no-repeat;
+    background :  url(../img/slider/img1.jpg) top center / cover no-repeat;
 
 }
 
@@ -201,6 +202,7 @@ html {
 #slider .text-decription{
     font-size: 15px;
     margin-top: 25px;
+    text-shadow: 0 0 3px #000;
 }
 
 #content{
